--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
+    "axios": "^1.2.2",
+    "camelcase-keys": "^8.0.2",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
